<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldAnneeModel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/form_anneeModel" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldMarqueVehicule"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="614dp"
        android:hint="@string/form_marqueVehicule" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldPrix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/form_prix" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldImage"
        android:layout_width="411dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/form_vehiculeImage" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldDescription"
        android:layout_width="411dp"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="284dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/form_description" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/form_button_save_vehicules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="381dp"
        android:text="@string/button_save_vehicules" />
</RelativeLayout>